--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,17 @@ body {
 
 img {
     max-width: 100%;
-    width: 70px;
+    width: 60px;
 }
 
 /*Utility*/
+
 .display-flex {
     display: flex;
+}
+
+.wrap {
+    flex-wrap: wrap;
 }
 
 .dispaly-none {
@@ -29,8 +34,33 @@ img {
     align-items: center;
 }
 
+.end {
+    justify-content: end;
+}
+
+.start {
+    align-items: start;
+}
+
 .text-center {
     text-align: center;
+}
+
+.p-1 {
+    padding: 1rem;
+}
+
+.p-2 {
+    padding: 2rem;
+}
+
+.m-b-05 {
+    margin-bottom: .5rem;
+}
+/*Custom Properties*/
+
+:root {
+    --backgound-grey:rgb(234 234 234);
 }
 
 /*COMMON*/
@@ -39,10 +69,11 @@ img {
 /*Header*/ 
 
 .header {
+
     width: 100%;
-    padding: .5rem;
      /*debug*/
      border: 1px solid;
+     background-color:var(--backgound-grey) ;
     
 } 
 
@@ -55,7 +86,6 @@ img {
 
 .header-chat {
     width: 70%;
-    height: 70px;
     /*debug*/
     border: 1px solid;
 }
@@ -65,6 +95,35 @@ img {
     width: 20%;
     /*debug*/
     border: 1px solid;
+}
+
+/*******************************************************************
+*********************************************************************
+******************************************************************/
+
+/*Main section*/
+
+.chat-section {
+    width: 100%;
+    height:80vh ;
+    /*debug*/
+    border: 1px solid;
+    background-image: url(../img/mine.jpg);
+    
+}
+
+
+.chat-row {
+    width: 100%;
+    
+    
+}
+
+.my-chat,
+.your-chat {
+    width: 70%;
+    /*debug*/
+    border:1px solid;
 }
 
 
