--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,26 @@ body {
 
 img {
     max-width: 100%;
-    width: 60px;
+    width: 40px;
+    aspect-ratio: 1;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.name-avatar {
+    font-size: .9rem;
 }
 
+a {
+    font-size: .6rem;
+    color: grey;
+}
+
+.lorem-avatar,
+.hours-chat {
+    font-size: .6rem;
+    color: gray;
+    
+}
 /*Utility*/
 
 .display-flex {
@@ -47,13 +64,15 @@ img {
 }
 
 .p-1 {
-    padding: 1rem;
+    padding: .5rem;
 }
 
 .p-2 {
     padding: 2rem;
 }
-
+.m-l {
+    margin-left: .5rem;
+}
 .m-b-05 {
     margin-bottom: .5rem;
 }
@@ -68,33 +87,36 @@ img {
 /*Layout*/
 /*Header*/ 
 
-.header {
-
+.container {
     width: 100%;
-     /*debug*/
-     border: 1px solid;
-     background-color:var(--backgound-grey) ;
+    height: 100vh;    
+}
+
+.header {
+    width: 100%;
+    background-color:var(--backgound-grey) ;
     
 } 
 
 .header-avatar {
     width: 10%;
-    /*debug*/
-    border: 1px solid;
+   
     
 }
 
 .header-chat {
     width: 70%;
-    /*debug*/
-    border: 1px solid;
+    
 }
 
 
 .header-icons {
     width: 20%;
-    /*debug*/
-    border: 1px solid;
+    
+}
+
+.cont-img-chat {
+    margin-left: .5rem;
 }
 
 /*******************************************************************
@@ -103,27 +125,84 @@ img {
 
 /*Main section*/
 
-.chat-section {
-    width: 100%;
-    height:80vh ;
-    /*debug*/
-    border: 1px solid;
-    background-image: url(../img/mine.jpg);
+.section-main {
+    height: 100%;
+    position: relative;
+}
+.avatar-section {
+    height:571.6px ;
+}
+
+.info-avatar {
+    flex-direction: column;
+    align-items:start;
+    justify-content: center;
+    margin-left: .4rem;
     
 }
+.chat-section {
+    width: 100%;
+    height: 521.6px;
+    background-image: url(../img/mine.jpg);
+    overflow-y: auto;    
+}
+
 
 
 .chat-row {
     width: 100%;
-    
     
 }
 
 .my-chat,
 .your-chat {
     width: 70%;
-    /*debug*/
-    border:1px solid;
+    position: relative;
+    margin-top: 2rem;
+    border-radius: 10px;
+    font-size: .8rem;
+}
+
+.my-chat {
+    background-color: rgb(213 249 186);
+    margin-right: .5rem;
+}
+.your-chat {
+    background-color: white;
+    margin-left: .5rem;
+}
+
+.my-angle,
+.your-angle {
+    position: absolute;
+}
+
+.my-angle {
+    top:45px;
+    right: 20px;
+}
+
+.your-angle{
+   top: 225px; 
+   right:145px;
+}
+.container-avatar-img {
+    overflow-y: auto;
+}
+
+/**************************************************************
+**************************************************************
+*************************************************************/
+
+/*Footer*/
+.footer {
+    width: 100%;
+    height: 51px;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--backgound-grey);
+    
+    
 }
 
 
